---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2020-06-10
  Bugfixes:
    - get_energy_value didn't parse energy strings with no SI prefix or deka
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2020-06-10
  Features:
    - get_energy_value supports exponents from 10^-24 to 10^24
  Bugfixes:
    - get_energy_value returned string, string instead of nil when unable to parse exponent
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2020-05-24
  Features:
    - Initial release