@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: ????
-  Changes:
+  Features:
+    - Added a myriad of colored slot styles; see "slot-styles.md" topic in docs
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2020-06-10
